--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,9 +41,15 @@ dependencies:
   splash_view: ^2.0.1
   page_view_indicators: ^2.0.0
   google_maps_flutter: ^2.1.0
+  retrofit: ^4.1.0
+  logger: any  #for logging purpose
+  json_annotation: ^4.8.1
 
 
 dev_dependencies:
+  retrofit_generator: '>=7.0.0 <8.0.0'
+  build_runner: '>=2.3.0 <4.0.0'
+  json_serializable: ^6.6.2
   flutter_test:
     sdk: flutter
 
