--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   logger: any  #for logging purpose
   json_annotation: ^4.8.1
   provider: ^6.1.2
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 
 dev_dependencies:
@@ -54,6 +56,7 @@ dev_dependencies:
   json_serializable: ^6.6.2
   flutter_test:
     sdk: flutter
+  hive_generator: ^2.0.1  
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
