--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,15 +48,25 @@ dependencies:
   provider: ^6.1.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+ 
+  
+
+ 
+  
 
 
 dev_dependencies:
-  retrofit_generator: '>=7.0.0 <8.0.0'
-  build_runner: '>=2.3.0 <4.0.0'
-  json_serializable: ^6.6.2
+  
+  
   flutter_test:
     sdk: flutter
   hive_generator: ^2.0.1  
+  retrofit_generator: '>=7.0.0 <8.0.0'
+  build_runner: '>=2.3.0 <4.0.0'
+  json_serializable: ^6.6.2
+  mockito:
+  
+  
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
