--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   provider: ^6.1.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  http:
+  
  
   
 
@@ -62,9 +64,11 @@ dev_dependencies:
     sdk: flutter
   hive_generator: ^2.0.1  
   retrofit_generator: '>=7.0.0 <8.0.0'
-  build_runner: '>=2.3.0 <4.0.0'
   json_serializable: ^6.6.2
-  mockito:
+  mockito: ^5.0.17
+  hive_test: ^1.0.0
+  build_runner: ^2.1.7
+ 
   
   
 
